--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,26 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import React from '../components/React.jsx';
 ---
 
 <Layout>
-	<h1>Hello World</h1>
+	<h1>Testing Astro!</h1>
+
+<div class="center">
+	<React/>
+
+</div>
 </Layout>
+
+<style>
+h1 {
+text-align: center;
+margin-block: 2em;
+}
+
+.center {
+	text-align: center;
+	font-size: 2rem;
+	margin-block: 5em;
+}
+</style>
