--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Showcase from '../components/Showcase.astro';
+import Features from '../components/Features.astro';
 import React from '../components/React.jsx';
 ---
 
 <Layout>
+	<Showcase showExtra/>
 	<h1>Testing Astro!</h1>
+
+	<Features/>
 
 <div class="center">
 	<React/>
@@ -22,5 +27,7 @@ margin-block: 2em;
 	text-align: center;
 	font-size: 2rem;
 	margin-block: 5em;
+	background-color: darkred;
+	color: white;
 }
 </style>
