--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 export interface Props {
@@ -24,5 +25,6 @@ const {title = 'Astro Test'} = Astro.props as Props;
   <body>
     <Header />
     <slot />
+    <Footer/>
   </body>
 </html>
