--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Showcase from '../components/Showcase.astro';
 import Features from '../components/Features.astro';
 import React from '../components/React.jsx';
+import Tabs from '../components/Tabs.astro';
 ---
 
 <Layout>
 	<Showcase showExtra/>
 	<h1>Testing Astro!</h1>
+
+	<Tabs headings={['Stuff', 'More Stuff', 'And More Stuff']} contents={['lorem alkdfj akldj lkdf', 'aldfjdfklfjja klasdfj kljaflk adkei l', 'aldkfj aklajd kakdj kajdk']} activeTextColor="yellow"/>
 
 	<Features/>
 
