Created blog with dynamic content from mark down

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,25 +1,21 @@
 ---
 export interface Props {
-  tite: string;
-  body: string;
   dark?: boolean;
 }
 
-const {title, body, dark = false} = Astro.props as Props;
-
+const { title, body, dark = false } = Astro.props as Props;
 ---
 
-      <div class={`card ${dark && 'dark'}`}>
-        <h3>{title}</h3>
-        <p>{body}</p>
-      </div>
+<div class={`card ${dark && 'dark'}`}>
+  <slot />
+</div>
 
 <style>
   .card {
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
   }
 
@@ -27,5 +23,4 @@ const {title, body, dark = false} = Astro.props as Props;
     background-color: var(--color-primary);
     color: #fff;
   }
-
 </style>
