--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,50 +1,83 @@
 ---
-
+import Navigation from './Navigation.astro';
+import Search from './Search.astro';
 import logo from '../images/logo.svg';
-
 ---
 
-
 <header class="header">
-  <div class="container">
+  <a class="sr-only" href="#main-content">Skip Navigation</a>
+
+  <div class="header__container">
     <div class="logo">
-      <a href="/">
-        <img src={logo} alt="" />
+      <a class="logo__link" href="#">
+        <img
+          class="logo__image"
+          src={logo}
+          alt="National Centers for Environmental Information logo"
+        />
       </a>
     </div>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
+
+    <button
+      class="mobile-nav-toggle"
+      id="menu-toggle"
+      aria-controls="primary-navigation"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Menu</span>
+
+      <svg
+        class="mobile-nav-toggle__icon"
+        aria-hidden="true"
+        version="1.1"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px"
+        y="0px"
+        viewBox="0 0 100 100"
+      >
+        <g class="mobile-nav-toggle__svg">
+          <path class="line line-1" d="M5 13h90v14H5z"></path>
+          <path class="line line-2" d="M5 43h90v14H5z"></path>
+          <path class="line line-3" d="M5 73h90v14H5z"></path>
+        </g>
+      </svg>
+    </button>
+    <Navigation />
+    <Search />
   </div>
 </header>
 
-<style>
-  .header {
-  height: 70px;
-  background: var(--color-primary);
-}
-.header .container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-.header img {
-  height: 35px;
-  vertical-align: middle;
-}
-.header nav ul {
-  display: flex;
-}
-.header nav ul li {
-  padding: 0 10px;
-}
-.header nav ul li a {
-  color: #fff;
+<style lang="scss">
+.header {
+  background: linear-gradient(
+      to bottom,
+      rgba(9, 19, 50, 0.73),
+      rgba(0, 8, 21, 0.24)
+    ),
+    url(../../images/ncei-noaa.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow-x: hidden;
+  height: 100vh;
+
+  &__container {
+    display: flex;
+    gap: var(--gap, 1rem);
+    margin: 4rem;
+
+    align-items: center;
+    justify-content: space-around;
+
+    @media (min-width: 900px) {
+      margin-inline: 2.5rem;
+    }
+
+    @media (min-width: 700px) {
+      justify-content: space-between;
+      margin-inline: 2rem;
+    }
+  }
 }
 </style>
