--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -1,3 +1,9 @@
+---
+
+  import searchLogo from '../images/search-white.svg'
+
+---
+
 <div class="search">
   <label for="search-bar" class="search-bar__label">Search</label>
   <div class="search-bar">
@@ -10,10 +16,156 @@
     />
     <button class="search-bar__submit" aria-label="submit search">
       <img
-        src="images/search-white.svg"
+        src={searchLogo}
         alt="search"
         class="search-bar__icon"
       />
     </button>
   </div>
 </div>
+
+<style lang="scss">
+  .search {
+    position: relative;
+    width: 18rem;
+
+    &-bar {
+      --size: 3.5rem;
+
+      border: 3px solid white;
+      display: flex;
+      border-radius: 5rem;
+      padding: 3px;
+      position: relative;
+      transition: width 300ms cubic-bezier(0.18, 0.89, 0.32, 1.15);
+      overflow: hidden;
+      animation: fadeIn 3s;
+      width: 100%;
+      max-width: 18rem;
+      color: white;
+
+      @media (max-width: 700px) {
+        display: none;
+      }
+
+      &__input {
+        font-size: 2rem;
+        padding: 0 0.5em 0 25%;
+        border: 0;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        line-height: calc(var(--size) - 3px);
+        cursor: pointer;
+        background-color: transparent;
+        color: inherit;
+
+        @media (max-width: 900px) {
+          font-size: 1.5rem;
+
+          padding: 0 0.5em 0 18%;
+        }
+
+        &::placeholder {
+          color: lightgray;
+        }
+
+        &:focus {
+          outline: 0; // NOTE Will have an alternative
+        }
+      }
+
+      &__label {
+        position: absolute;
+        left: 4.5rem;
+        top: -2.4rem;
+        z-index: 10;
+        opacity: 0;
+        transition: transform 300ms ease-out;
+        color: white;
+        font-size: 2rem;
+      }
+
+      &__submit {
+        font-size: 2rem;
+        cursor: pointer;
+        border: 0;
+        border-radius: 50%;
+        width: calc(var(--size) - 10px);
+        height: calc(var(--size) - 10px);
+        margin-left: auto;
+        transition: background-color 150ms ease-in-out;
+
+        fill: white;
+        background-color: transparent;
+      }
+
+      &__icon {
+        width: 50%;
+      }
+
+      &:focus-within {
+        .search-bar__submit {
+          background-color: lightbluue;
+          fill: white;
+
+          &:focus,
+          &:hover {
+            outline: 0;
+            box-shadow: 0 0 10px var(--clr-transparent-two);
+          }
+        }
+      }
+
+      // @media (max-width: 1105px) {
+      //   --size: 3.5rem;
+      //   height: var(--size);
+      //   width: var(--size);
+
+      //   &__input {
+      //     opacity: 0;
+      //     font-size: 1.5rem;
+      //   }
+
+      //   &:focus-within {
+      //     width: 100%;
+
+      //     .search-bar__input {
+      //       opacity: 1;
+      //       cursor: initial;
+      //       width: calc(100% - var(--size));
+      //     }
+      //   }
+      // }
+    }
+  }
+</style>
+
+<script>
+  // const searchLabelAnimation = () => {
+  //   const searchInput = document.querySelectorAll('.search-bar__input');
+  //   const searchLabel = document.querySelectorAll('.search-bar__label');
+
+  //   searchInput.forEach(input => {
+  //     input.addEventListener('input', function () {
+  //       searchLabel.forEach(label => {
+  //         label.style.transform = 'translateY(-10%)';
+  //         label.style.opacity = '1';
+  //         if (this.value.length === 0) {
+  //           label.style.transform = 'translateY(10%)';
+  //           label.style.opacity = '0';
+  //         }
+
+  //         // May be too much.
+  //         // input.addEventListener('blur', function () {
+  //         //   this.value = '';
+  //         //   label.style.transform = 'translateY(10%)';
+  //         //   label.style.opacity = '0';
+  //         // });
+  //       });
+  //     });
+  //   });
+  // };
+  // searchLabelAnimation();
+</script>
