--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,9 +6,15 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; // 10px / 16px = 62.5% -> 1rem = 10px
+  scroll-behavior: smooth;
 }
 
 body {
