fixed js, in order for .styles to work you must set the var as HTMLElement

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -362,8 +362,8 @@
 </style>
 
 <script>
-  const primaryNav = document.querySelector('.navigation__list');
-  const navToggle = document.getElementById('menu-toggle');
+  const primaryNav = document.querySelector('.navigation__list') as HTMLElement;
+  const navToggle = document.getElementById('menu-toggle') as HTMLElement;
 
   navToggle.addEventListener('click', () => {
     const visibility = primaryNav.getAttribute('data-visible');
