created alert component, link compnent and a glowEffect compontent.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import Logo from './Logo.astro';
         rgba(9, 19, 50, 0.73),
         rgba(0, 8, 21, 0.24)
       ),
-      url(//picsum.photos/900);
+      url('../images/ncei-noaa.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
