--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Alerts from '../components/Alerts.astro';
 ---
 
-<Layout />
+<Layout>
+  <Alerts />
+</Layout>
 
 <style></style>
