--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,3 +1,9 @@
+---
+import { Icon } from 'astro-icon';
+import Link from './Link.astro';
+import navData from '../data/navData';
+---
+
 <button
   class="mobile-nav-toggle"
   id="menu-toggle"
@@ -6,193 +12,69 @@
 >
   <span class="sr-only">Menu</span>
 
-  <svg
-    class="mobile-nav-toggle__icon"
-    aria-hidden="true"
-    version="1.1"
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    x="0px"
-    y="0px"
-    viewBox="0 0 100 100"
-  >
-    <g class="mobile-nav-toggle__svg">
-      <path class="line line-1" d="M5 13h90v14H5z"></path>
-      <path class="line line-2" d="M5 43h90v14H5z"></path>
-      <path class="line line-3" d="M5 73h90v14H5z"></path>
-    </g>
-  </svg>
+  <Icon name="mdi:menu" width="50" />
 </button>
 
-<nav class="navigation">
-  <ul class="navigation__list" id="primary-navigation" data-visible="false">
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >Home</a
-      >
-    </li>
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >Products</a
-      >
-    </li>
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >Services</a
-      >
-    </li>
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >News</a
-      >
-    </li>
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >About</a
-      >
-    </li>
-    <li class="navigation__item">
-      <a href="#" class="navigation__link glow">
-        <svg class="glow--container">
-          <rect pathLength="100" stroke-linecap="round" class="glow--blur"
-          ></rect>
-          <rect pathLength="100" stroke-linecap="round" class="glow--line"
-          ></rect></svg
-        >Contact</a
-      >
-    </li>
+<nav aria-label="Primary">
+  <ul id="primary-navigation" data-visible="false">
+    {navData.map((item) =>
+      <li><Link text={item.name} href={item.path} style="primary" isFilled={false} data-navLink /></li>
+    )}
     <div class="animation start-home"></div>
   </ul>
 </nav>
 
 <style lang="scss">
   .navigation {
-    &__list {
-      display: flex;
-      gap: var(--gap, 1em);
+  }
 
-      list-style: none;
-      // padding: 0;
-      // margin: 0;
+  ul {
+    display: flex;
+    gap: var(--gap, 1em);
 
-      @media (max-width: 700px) {
-        --gap: 2em;
-        position: fixed;
-        inset: 0 0 0 30%;
-        flex-direction: column;
-        padding: min(30vh, 10rem) 2em;
-        background: hsl(0, 0%, 0%, 0.5);
-        z-index: 1000;
+    list-style: none;
+    // padding: 0;
+    // margin: 0;
 
-        transform: translateX(100%);
-        transition: transform 350ms ease-out;
+    @media (max-width: 700px) {
+      --gap: 2em;
+      position: fixed;
+      inset: 0 0 0 30%;
+      flex-direction: column;
+      padding: min(30vh, 10rem) 2em;
+      background: hsl(0, 0%, 0%, 0.5);
+      z-index: 1000;
 
-        @supports (backdrop-filter: blur(1rem)) {
-          background: hsl(0, 0%, 100%, 0.1);
-          backdrop-filter: blur(1rem);
-        }
-      }
+      transform: translateX(100%);
+      transition: transform 350ms ease-out;
 
-      @media (max-width: 700px) {
-        --gap: clamp(1.5rem, 5vw, 3rem);
-        // padding-block: 22rem;
-        padding-inline: clamp(3rem, 7vw, 10rem);
-      }
-
-      &[data-visible='true'] {
-        @media (max-width: 700px) {
-          transform: translateX(0%);
-        }
+      @supports (backdrop-filter: blur(1rem)) {
+        background: hsl(0, 0%, 100%, 0.1);
+        backdrop-filter: blur(1rem);
       }
     }
 
-    &__item {
-      // & :is(:hover, :focus) {
-      //   background: #ffffff;
-      //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      //   border-radius: 4px;
-      //   color: #0076d6;
-      // }
+    @media (max-width: 700px) {
+      --gap: clamp(1.5rem, 5vw, 3rem);
+      // padding-block: 22rem;
+      padding-inline: clamp(3rem, 7vw, 10rem);
     }
 
-    &__link {
-      text-decoration: none;
-      color: white;
-      padding: 1em;
-
-      font-weight: 700;
-      font-size: 1.8rem;
-
-      outline: none;
-
-      @media (max-width: 900px) {
-        padding: 0.8em;
-      }
-
-      position: relative;
-      z-index: 1;
-
-      &:is(:hover, :focus) {
-        color: blue;
-        transition: color 25ms ease-in;
-
-        // background-color: white;
-        // border-radius: 8px;
-      }
-
-      &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        z-index: -1;
-        border-radius: 8px;
-
-        transform: scaleX(0);
-        // transform-origin: right;
-        transition: transform 20ms ease-in;
-      }
-
-      &:is(:hover, :focus)::after {
-        transform: scaleX(1);
-        // transform-origin: left;
-        // animation: scale-up-ver-center 100ms cubic-bezier(0.39, 0.575, 0.565, 1)
-        //   both;
-
-        animation: scale-up-center 100ms cubic-bezier(0.39, 0.575, 0.565, 1)
-          both;
+    &[data-visible='true'] {
+      @media (max-width: 700px) {
+        transform: translateX(0%);
       }
     }
   }
 
+  li {
+    // & :is(:hover, :focus) {
+    //   background: #ffffff;
+    //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    //   border-radius: 4px;
+    //   color: #0076d6;
+    // }
+  }
   .mobile-nav-toggle {
     display: none;
 
@@ -244,6 +126,7 @@
       top: 0;
     }
   }
+
   .mobile-nav-toggle__svg {
     .line {
       opacity: 1;
@@ -258,111 +141,10 @@
       transform-origin: 1em 4.5em;
     }
   }
-
-  @keyframes scale-up-ver-center {
-    0% {
-      transform: scaleY(0.2);
-    }
-    100% {
-      transform: scaleY(1);
-    }
-  }
-
-  @keyframes scale-up-center {
-    0% {
-      transform: scale(0.5);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-
-  .glow {
-    --glow-line-color: #000;
-    --glow-line-thickness: 1px;
-    --glow-line-length: 90px;
-    --glow-blur-color: #fff;
-    --glow-blur-size: 3px;
-    --glow-offset: 3px;
-    --animation-speed: 800ms;
-    /* do not change, used for calculations */
-    --container-offset: 100px;
-    position: relative;
-
-    // &:is(:hover, :focus) :is(.glow--line, .glow--blur) {
-    //   stroke-dashoffset: -80px;
-    //   transition: stroke-dashoffset var(--animation-speed) ease-in;
-    // }
-
-    // &:is(:hover, :focus) .glow--container {
-    //   animation: glow-visibility ease-in-out var(--animation-speed);
-    // }
-
-    &:is(:active) :is(.glow--line, .glow--blur) {
-      stroke-dashoffset: -80px;
-      transition: stroke-dashoffset var(--animation-speed) ease-in;
-    }
-
-    &:is(:active) .glow--container {
-      animation: glow-visibility ease-in-out var(--animation-speed);
-    }
-
-    &--container {
-      pointer-events: none;
-      position: absolute;
-      inset: calc(var(--container-offset) / -2);
-      width: calc(100% + var(--container-offset));
-      height: calc(100% + var(--container-offset));
-      opacity: 0;
-    }
-
-    &--blur {
-      width: calc(100% - var(--container-offset) + var(--glow-offset));
-      height: calc(100% - var(--container-offset) + var(--glow-offset));
-      x: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
-      y: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
-      // rx: 8px;
-      fill: transparent;
-      filter: blur(var(--glow-blur-size));
-      stroke: var(--glow-blur-color);
-      stroke-width: var(--glow-blur-size);
-      stroke-dasharray: var(--glow-line-length)
-        calc(50px - var(--glow-line-length));
-    }
-
-    &--line {
-      width: calc(100% - var(--container-offset) + var(--glow-offset));
-      height: calc(100% - var(--container-offset) + var(--glow-offset));
-      x: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
-      y: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
-      // rx: 8px;
-      fill: transparent;
-      stroke: var(--glow-line-color);
-      stroke-width: var(--glow-line-thickness);
-      stroke-dasharray: 20px 30px;
-      transition: stroke-dashoffset 500ms;
-    }
-  }
-
-  @keyframes glow-visibility {
-    0%,
-    100% {
-      opacity: 0;
-    }
-
-    75% {
-      opacity: 1;
-    }
-  }
-
-
-  .sr-only {
-    display: none;
-  }
 </style>
 
 <script>
-  const primaryNav = document.querySelector('.navigation__list') as HTMLElement;
+  const primaryNav = document.querySelector('ul') as HTMLElement;
   const navToggle = document.getElementById('menu-toggle') as HTMLElement;
 
   navToggle.addEventListener('click', () => {
