--- a/src/components/Alerts.astro
+++ b/src/components/Alerts.astro
@@ -1,5 +1,5 @@
 ---
-import Card from '../components/Card.astro';
+import { Icon } from 'astro-icon';
 
 const response = await fetch('https://www.ncei.noaa.gov/alerts/api');
 const { ...alerts } = await response.json();
@@ -9,22 +9,33 @@ const alertBody = alerts[0].body[0];
 ---
 
 <div class="alert">
-  <h2>{alertTitle.value}</h2>
-  <Fragment set:html={alertBody.processed} />
+  <Icon name="mdi:lightbulb" width="25" color="var(--clr-base)" />
+  <div class="content">
+    <h2>{alertTitle.value}</h2>
+    <Fragment set:html={alertBody.processed} />
+  </div>
 </div>
 
 <style lang="scss">
   .alert {
     color: white;
-    background-color: blue;
-    padding: 20px;
-    max-width: 500px;
-    margin: 0 auto;
+    background-color: var(--clr-info);
+    padding: 1em;
+    max-width: 50rem;
+    margin: 5rem auto;
     font-size: 15px;
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5em;
 
-    h2 {
-      font-size: 20px;
-      padding-block: 5px;
-    }
+    border-left: 15px solid var(--clr-accent);
+  }
+
+  .content {
+  }
+
+  h2 {
+    font-size: 20px;
+    padding-bottom: 0.5em;
   }
 </style>
