--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -134,8 +134,12 @@ import { Icon } from 'astro-icon';
 
 <script>
   const searchLabelAnimation = () => {
-    const searchInput = document.querySelectorAll('.search-bar__input') as HTMLElement;
-    const searchLabel = document.querySelectorAll('.search-bar__label') as HTMLElement;
+    const searchInput = document.querySelectorAll(
+      '.search-bar__input'
+    ) as HTMLElement;
+    const searchLabel = document.querySelectorAll(
+      '.search-bar__label'
+    ) as HTMLElement;
 
     searchInput.forEach(input => {
       input.addEventListener('input', function () {
