just some clean up and messing around with feats

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,10 +1,13 @@
 ---
-import logo from '../images/logo.svg';
+// import { Icon } from 'astro-icon';
+
+import logo from '../icons/logo.svg';
 ---
 
 <div>
   <a href="#">
     <img src={logo} alt="National Centers for Environmental Information logo" />
+    <!-- <Icon name="logo" /> -->
   </a>
 </div>
 
