--- a/src/components/MobileButton.astro
+++ b/src/components/MobileButton.astro
@@ -10,7 +10,24 @@ import { Icon } from 'astro-icon';
 >
   <span class="sr-only">Menu</span>
 
-  <Icon name="mdi:menu" width="50" />
+  <!-- <Icon name="mdi:menu" width="50" /> -->
+
+  <svg
+    class="mobile-nav-toggle__icon"
+    aria-hidden="true"
+    version="1.1"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    x="0px"
+    y="0px"
+    viewBox="0 0 100 100"
+  >
+    <g class="mobile-nav-toggle__svg">
+      <path class="line line-1" d="M5 13h90v14H5z"></path>
+      <path class="line line-2" d="M5 43h90v14H5z"></path>
+      <path class="line line-3" d="M5 73h90v14H5z"></path>
+    </g>
+  </svg>
 </button>
 
 <style lang="scss">
@@ -81,7 +98,6 @@ import { Icon } from 'astro-icon';
     }
   }
 </style>
-
 
 <script>
   const primaryNav = document.querySelector('ul') as HTMLElement;
