--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -2,7 +2,7 @@ $colors: (
   //ELEMENT PRIMARY COLORS
   primary:
     (
-      primary: hsl(207, 100%, 42%),
+      primary: '207, 100%, 42%',
       dark: hsl(218, 100%, 42%),
       darker: hsl(214, 70%, 9%),
       darkest: hsl(216, 57%, 20%),
