--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -55,7 +55,7 @@ import navData from '../data/navData';
 
     @media (max-width: 700px) {
       --gap: clamp(1.5rem, 5vw, 3rem);
-      // padding-block: 22rem;
+      padding-block: 22em;
       padding-inline: clamp(3rem, 7vw, 10rem);
     }
 
