--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,50 +1,45 @@
 ---
-
-import logo from '../images/logo.svg';
-
+import Navigation from './Navigation.astro';
+import Search from './Search.astro';
+import Logo from './Logo.astro';
 ---
 
+<header>
+  <a class="sr-only" href="#main-content">Skip Navigation</a>
 
-<header class="header">
-  <div class="container">
-    <div class="logo">
-      <a href="/">
-        <img src={logo} alt="" />
-      </a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
+  <div>
+    <Logo />
+    <Navigation />
+    <Search />
   </div>
 </header>
 
 <style>
-  .header {
-  height: 70px;
-  background: var(--color-primary);
-}
-.header .container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-.header img {
-  height: 35px;
-  vertical-align: middle;
-}
-.header nav ul {
-  display: flex;
-}
-.header nav ul li {
-  padding: 0 10px;
-}
-.header nav ul li a {
-  color: #fff;
-}
+  header {
+    background: linear-gradient(
+        to bottom,
+        rgba(9, 19, 50, 0.73),
+        rgba(0, 8, 21, 0.24)
+      ),
+      url('../images/ncei-noaa.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow-x: hidden;
+    height: 100vh;
+    & div {
+      display: flex;
+      gap: var(--gap, 1rem);
+      margin: 4rem;
+      align-items: center;
+      justify-content: space-around;
+      @media (max-width: 900px) {
+        margin-inline: 2.5rem;
+      }
+      @media (max-width: 700px) {
+        justify-content: space-between;
+        margin-inline: 2rem;
+      }
+    }
+  }
 </style>
