--- a/src/components/MobileButton.astro
+++ b/src/components/MobileButton.astro
@@ -30,10 +30,11 @@ import { Icon } from 'astro-icon';
 </button>
 
 <style>
+  @import '../styles/abstracts/breakpoints.css';
   .mobile-nav-toggle {
     display: none;
     padding: 1em;
-    @media (max-width: 700px) {
+    @media (--tablet) {
       display: block;
       position: absolute;
       aspect-ratio: 1;
@@ -98,11 +99,11 @@ import { Icon } from 'astro-icon';
   navToggle.addEventListener('click', () => {
     const visibility = primaryNav.getAttribute('data-visible');
     if (visibility === 'false') {
-      primaryNav.setAttribute('data-visible', true);
-      navToggle.setAttribute('aria-expanded', true);
+      primaryNav.setAttribute('data-visible', 'true');
+      navToggle.setAttribute('aria-expanded', 'true');
     } else {
-      primaryNav.setAttribute('data-visible', false);
-      navToggle.setAttribute('aria-expanded', false);
+      primaryNav.setAttribute('data-visible', 'false');
+      navToggle.setAttribute('aria-expanded', 'false');
     }
     // Toggle class "opened". Set also aria-expanded to true or false.
     if (-1 !== navToggle.className.indexOf('opened')) {
