Got settings for css & postcss the way I want it!

--- a/src/components/MobileButton.astro
+++ b/src/components/MobileButton.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from 'astro-icon';
+// import { Icon } from 'astro-icon';
 ---
 
 <button
@@ -30,7 +30,6 @@ import { Icon } from 'astro-icon';
 </button>
 
 <style>
-  @import '../styles/abstracts/breakpoints.css';
   .mobile-nav-toggle {
     display: none;
     padding: 1em;
