--- a/src/components/Alerts.astro
+++ b/src/components/Alerts.astro
@@ -17,8 +17,7 @@ const alertBody = alerts[0].body[0];
 <style>
   .alert {
     color: white;
-    background-color: var(--clr-info);
-    background-color: blue;
+    background-color: hsl(var(--clr-info));
     padding: 1em;
     max-width: 50rem;
     margin: 5rem auto;
@@ -26,8 +25,7 @@ const alertBody = alerts[0].body[0];
     display: flex;
     align-items: flex-start;
     gap: 0.5em;
-    border-left: 15px solid var(--clr-accent);
-    border-left: 15px solid green;
+    border-left: 15px solid hsl(var(--clr-accent));
   }
   .content {
   }
