--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -48,13 +48,13 @@ const {
 </a>
 
 <style>
-  a {
+  .primary {
     text-decoration: none;
-    color: white;
+    color: hsl(var(--clr-white));
     padding: 1em;
     cursor: pointer;
     font-weight: 700;
-    font-size: 1.8rem;
+    font-size: var(--fs-4);
     outline: none;
     @media (max-width: 900px) {
       padding: 0.8em;
