--- a/src/components/GlowEffect.astro
+++ b/src/components/GlowEffect.astro
@@ -5,10 +5,10 @@
 
 <style is:global>
   .glow {
-    --glow-line-color: #000;
+    --glow-line-color: hsl(var(--clr-black));
     --glow-line-thickness: 1px;
     --glow-line-length: 90px;
-    --glow-blur-color: #fff;
+    --glow-blur-color: hsl(var(--clr-white));
     --glow-blur-size: 3px;
     --glow-offset: 3px;
     --animation-speed: 800ms;
