--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -12,7 +12,7 @@ import { Icon } from 'astro-icon';
   .logo {
     width: 90%;
     min-width: 18rem;
-    @media (max-width: 85em) {
+    @media (--tablet) {
       width: 70%;
     }
   }
