--- a/src/components/MobileButton.astro
+++ b/src/components/MobileButton.astro
@@ -41,7 +41,7 @@
       border: none;
       border-radius: 0;
       background: transparent;
-      color: #fff;
+      color: var(--clr-white);
       cursor: pointer;
       display: inline-block;
       padding: 1em 1.5em;
@@ -50,7 +50,7 @@
       z-index: 9999;
     }
     &:focus {
-      outline: none;
+      outline: transparent;
     }
     &.opened {
       .mobile-nav-toggle__svg {
