--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -50,19 +50,19 @@ const {
 <style>
   a {
     text-decoration: none;
-    color: white;
+    color: var(--clr-white);
     padding: 1em;
     cursor: pointer;
-    font-weight: 700;
-    font-size: 1.8rem;
+    font-weight: var(--fw-6);
+    font-size: var(--fs-2);
     outline: none;
-    @media (max-width: 900px) {
+    @media (--desktop) {
       padding: 0.8em;
     }
     position: relative;
     z-index: 1;
     &:is(:hover, :focus) {
-      color: blue;
+      color: var(--clr-primary-dark);
       transition: color 25ms ease-in;
     }
     &::after {
@@ -72,7 +72,7 @@ const {
       bottom: 0;
       width: 100%;
       height: 100%;
-      background-color: white;
+      background-color: var(--clr-white);
       z-index: -1;
       border-radius: 8px;
       transform: scaleX(0);
