--- a/src/components/Alerts.astro
+++ b/src/components/Alerts.astro
@@ -5,6 +5,7 @@ const { ...alerts } = await response.json();
 const alertType = alerts[0].field_alert_type[0].value;
 const alertTitle = alerts[0].title[0];
 const alertBody = alerts[0].body[0];
+
 let iconName, className;
 
 if (alertType == 'severity-high')
@@ -48,7 +49,7 @@ if (alertType == 'success') (iconName = 'mdi:check'), (className = 'success');
   }
 
   .alert {
-    background-color: var(--alert-bg);
+    background-color: hsl(var(--alert-bg-hs) calc(var(--alert-bg-l) + 30%));
     padding: 1em;
     max-width: 50rem;
     margin: 5rem auto;
@@ -56,8 +57,7 @@ if (alertType == 'success') (iconName = 'mdi:check'), (className = 'success');
     display: flex;
     align-items: flex-start;
     gap: 0.5em;
-    border-left: 15px solid
-      hsl(var(--alert-bg-hs) calc(var(--alert-bg-l) - 20%));
+    border-left: 15px solid var(--alert-bg);
 
     h2 {
       font-size: var(--fs-3);
