--- a/src/components/Alerts.astro
+++ b/src/components/Alerts.astro
@@ -1,13 +1,19 @@
 ---
+// Imports
 import { Icon } from 'astro-icon';
 
 import changeDateFormat from '../js/dateFunctions.js';
+
+// Fetching alerts
 const response = await fetch('https://www.ncei.noaa.gov/alerts/api');
 const { ...alerts } = await response.json();
+
+// Alert info
 // const alertTitle = alerts[0].title[0].value;
 const alertType = alerts[0].field_alert_type[0].value;
 const alertBody = alerts[0].body[0].processed.replace(/(<([^>]+)>)/gi, '');
 
+// Dates
 let alertCreatedDate = alerts[0].created[0].value;
 let alertEndDate = alerts[0].field_end_date[0].value;
 let todayDate = new Date();
@@ -16,6 +22,7 @@ alertCreatedDate = changeDateFormat(alertCreatedDate);
 alertEndDate = changeDateFormat(alertEndDate);
 todayDate = changeDateFormat(todayDate);
 
+// Dynamicly Changing styles
 let iconName, className;
 
 if (alertType == 'severity-high')
