--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Alerts from '../components/Alerts.astro';
 ---
 
-<Layout>
-  <Alerts />
-</Layout>
+<Layout />
